--- a/css/style.scss
+++ b/css/style.scss
@@ -2,3 +2,15 @@ body {
     font-family: medium-content-sans-serif-font, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
     ;
 }
+
+.wrapper-container-2{
+    margin-left: 0;
+    margin-right: 0;
+}
+.card-img-top{
+    height: 200px;
+}
+.mr-3{
+    width: 20%;
+    height: 20%;
+}
