bajada proyecto domingo

--- a/css/style.scss
+++ b/css/style.scss
@@ -11,13 +11,15 @@ body {
     max-width: none;
 }
 .card-img-top{
-    height: 100px;
+    height: 50px;
     width: 100vw;
 }
 .wrapper-row-2-1{
    
 }
 
+.card-body{
+    border: none;
 
 
 .mr-3{
