--- a/css/style.scss
+++ b/css/style.scss
@@ -5,10 +5,40 @@ $super-light-grey:#D9D9D9;
 $medium-green:#018F69;
 $medium-dark-green:hsl(164, 100%, 15%);
 
-
 body {
     font-family: medium-content-sans-serif-font, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
 }
+
+/*CSS de Luis*/
+
+nav{
+    div{
+        div{
+            img{
+
+            }
+        }
+        div{
+            img{
+
+            }
+            button{
+
+            }
+            p{
+
+            }
+
+        }
+    div{
+        ul{
+            li{
+
+            }
+        }
+    }
+}
+
 .signup{
     background-color: fuchsia;
     color:white;
@@ -48,7 +78,16 @@ body {
     }
 }
 
+/*CSS de Borja*/
 
+#main-articles{
+    .row{
+        .feature-article{     
+        }
+    }
+}
+
+/*CSS de Axel*/
 
 #article-list{
     ul{
