--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,8 @@
 @charset "UTF-8";
 /*Declaración de Variables de colores*/
+/*Mewdium fonts*/
+/* General*/
 body {
   font-family: medium-content-sans-serif-font, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
-}
-
-.signup {
-  background-color: fuchsia;
-  color: white;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  padding: 10px;
-  margin: 20px;
-  font-size: 1.5vw;
-  text-align: center;
-  font-weight: 700;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.signup:hover {
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: white;
-  color: #6c757d;
-  border-color: #333333;
-}
-
-.navimg:hover {
-  cursor: pointer;
-}
-
-.navul {
-  width: 90%;
-}
-
-.navul .navli {
-  text-transform: uppercase;
-  font-size: 16px;
-  color: rgba(0, 0, 0, 0.54);
-}
-
-.navul .navli:hover {
-  cursor: pointer;
-  color: #212529;
-}
-
-#article-list ul li img {
-  width: 190px;
 }
 /*# sourceMappingURL=style.css.map */
