--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,7 @@ nav{
     div{
         div{
             img{
+
             }
         }
         div{
@@ -64,6 +65,24 @@ nav{
     }
 }
 
+
+
+
+
+
+
+
+
+/*CSS de Borja*/
+
+#main-articles{
+    .row{
+        .feature-article{     
+        }
+    }
+}
+
+/*CSS de Axel*/
 
 #article-list{
     ul{
