--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,28 @@ body {
   font-family: medium-content-sans-serif-font, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
 }
 
-.signup {
+/*CSS de Luis*/
+nav {
+  max-height: 1000px;
+}
+
+nav .nav-container1 svg {
+  margin-right: 20px;
+  fill: #757575;
+}
+
+nav .nav-container1 svg:hover {
+  cursor: pointer;
+  fill: #292929;
+}
+
+nav .btn:hover {
+  background-color: white;
+  color: #6c757d;
+  border-color: #333333;
+}
+
+nav p {
   background-color: fuchsia;
   color: white;
   border-radius: 50%;
@@ -26,41 +47,45 @@ body {
           justify-content: center;
 }
 
-.signup:hover {
+nav .signup:hover {
   cursor: pointer;
 }
 
-.btn:hover {
-  background-color: white;
-  color: #6c757d;
-  border-color: #333333;
+nav .nav-container2 .navul {
+  width: 100%;
 }
 
-.navimg:hover {
-  cursor: pointer;
-}
-
-.navul {
-  width: 90%;
-  /* Handle */
-}
-
-.navul .navli {
+nav .nav-container2 .navul .navli {
   text-transform: uppercase;
   font-size: 16px;
   color: rgba(0, 0, 0, 0.54);
 }
 
-.navul .navli:hover {
+nav .nav-container2 .navul .navli:hover {
   cursor: pointer;
   color: #212529;
 }
 
-.navul ::-webkit-scrollbar-thumb {
-  background: red;
-  border-radius: 10px;
+nav .nav-container2 .navul::-webkit-scrollbar {
+  background-color: white;
+  height: 50px;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  position: relative;
 }
 
+nav .nav-container2 .navul::-webkit-scrollbar-button {
+  background-color: gray;
+  height: 100px;
+  position: absolute;
+  top: 50px;
+}
+
+/*CSS de Borja*/
+/*CSS de Axel*/
 #article-list ul li img {
   width: 190px;
 }
