--- a/css/style.css
+++ b/css/style.css
@@ -149,34 +149,46 @@ nav .nav-container2 .navul::-webkit-scrollbar-button {
   width: 152px;
 }
 
-#article-list aside {
+aside {
   right: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-#article-list aside h4 {
+aside .make-me-sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 0 15px;
+}
+
+aside h4 {
   font-size: 1.1em;
   line-height: 1.2;
   font-weight: 600;
 }
 
-#article-list aside h5 {
+aside h5 {
   font-size: 1.6em;
   line-height: 1.2;
   font-weight: 600;
 }
 
-#article-list aside .popularity span {
+aside .popularity span {
   font-size: 2.1em;
   line-height: .9em;
 }
 
-#article-list aside footer ul {
+aside footer ul {
   font-size: 1em;
   font-weight: 400;
   color: rgba(0, 0, 0, 0.54);
 }
 
-#article-list aside footer ul li:hover {
+aside footer ul li:hover {
   cursor: pointer;
   text-decoration: underline;
 }
