--- a/css/style.scss
+++ b/css/style.scss
@@ -178,36 +178,46 @@ nav{
             width: 152px;
         }
     }
+}
 
-
-    aside{
-        right: 0;
-        h4{
-            font-size: 1.1em;
-            line-height: 1.2;
-            font-weight: 600;
+aside{
+    right: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    .make-me-sticky {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        padding: 0 15px;
+    }
+    h4{
+        font-size: 1.1em;
+        line-height: 1.2;
+        font-weight: 600;
+    }
+    h5{
+        font-size: 1.6em;
+        line-height: 1.2;
+        font-weight: 600;
+    }
+    .popularity{
+        span{
+            font-size: 2.1em;
+            line-height: .9em;
         }
-        h5{
-            font-size: 1.6em;
-            line-height: 1.2;
-            font-weight: 600;
-        }
-        .popularity{
-            span{
-                font-size: 2.1em;
-                line-height: .9em;
+    }
+    footer {
+        ul{
+            li:hover{
+                cursor: pointer;
+                text-decoration: underline;
             }
-        }
-        footer {
-            ul{
-                li:hover{
-                    cursor: pointer;
-                    text-decoration: underline;
-                }
-                font-size: 1em;
-                font-weight: 400;
-                color: rgba(0,0,0,.54)
-            }
+            font-size: 1em;
+            font-weight: 400;
+            color: rgba(0,0,0,.54)
         }
     }
 }
@@ -222,3 +232,5 @@ nav{
         }
     }
 }
+
+
