--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ nav {
   max-height: 1000px;
 }
 
+nav .logo #logo-mobile {
+  fill: #292929;
+}
+
 nav .nav-container1 svg {
   margin-right: 20px;
   fill: #757575;
@@ -81,6 +85,9 @@ nav .signup:hover {
 
 nav .nav-container2 .navul {
   width: 100%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 nav .nav-container2 .navul .navli {
@@ -106,6 +113,7 @@ nav .nav-container2 .navul::-webkit-scrollbar {
 }
 
 nav .nav-container2 .navul::-webkit-scrollbar-button {
+  display: none;
   background-color: white;
   border: 1px solid #757575;
   height: 100px;
@@ -114,6 +122,14 @@ nav .nav-container2 .navul::-webkit-scrollbar-button {
 }
 
 /*CSS de Borja*/
+#main-articles .feature-article .article-title:hover {
+  cursor: pointer;
+}
+
+#main-articles ul li .cursor-pointer:hover {
+  cursor: pointer;
+}
+
 /*CSS de Axel*/
 #article-list .m-article .origin-tag {
   font-weight: 400;
@@ -191,6 +207,34 @@ aside footer ul {
 aside footer ul li:hover {
   cursor: pointer;
   text-decoration: underline;
+}
+
+.tooltip-group .tooltip-body {
+  background-color: #fafafa;
+  position: revert;
+  top: 100%;
+  width: 100%;
+  left: 0;
+  top: calc(100% + 20px);
+  height: 100px;
+}
+
+.tooltip-group .tooltip-body:before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid red;
+  position: absolute;
+  bottom: 10px;
+  left: calc(50% - 10px);
+}
+
+.tooltip-group:hover .tooltip-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media screen and (max-width: 480px) {
